--- a/services/gateway-service/pom.xml
+++ b/services/gateway-service/pom.xml
@@ -15,6 +15,11 @@
 
   <dependencies>
     <dependency>
+      <groupId>com.ht.tools</groupId>
+      <artifactId>ht-tools-common-core</artifactId>
+      <version>${project.version}</version>
+    </dependency>
+    <dependency>
       <groupId>org.springframework.boot</groupId>
       <artifactId>spring-boot-starter-web</artifactId>
     </dependency>
