--- a/services/pom.xml
+++ b/services/pom.xml
@@ -10,6 +10,8 @@
   <name>hr-tools-services-parent</name>
 
   <modules>
+    <module>common/ht-tools-common-core</module>
+    <module>common/ht-tools-common-web</module>
     <module>gateway-service</module>
     <module>iam-service</module>
   </modules>
@@ -20,9 +22,9 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
-    <spring-boot.version>4.0.1</spring-boot.version>
-    <spring-cloud.version>2025.1.0</spring-cloud.version>
-    <spring-cloud-alibaba.version>2025.1.0</spring-cloud-alibaba.version>
+    <spring-boot.version>3.5.0</spring-boot.version>
+    <spring-cloud.version>2025.0.0</spring-cloud.version>
+    <spring-cloud-alibaba.version>2025.0.0.0</spring-cloud-alibaba.version>
 
     <mysql-connector-j.version>9.5.0</mysql-connector-j.version>
     <mybatis-plus.version>3.5.7</mybatis-plus.version>
@@ -61,7 +63,7 @@
       </dependency>
       <dependency>
         <groupId>com.baomidou</groupId>
-        <artifactId>mybatis-plus-spring-boot4-starter</artifactId>
+        <artifactId>mybatis-plus-spring-boot3-starter</artifactId>
         <version>${mybatis-plus.version}</version>
       </dependency>
       <dependency>
