--- a/services/iam-service/src/main/resources/application.yml
+++ b/services/iam-service/src/main/resources/application.yml
@@ -12,13 +12,9 @@ spring:
     nacos:
       discovery:
         server-addr: 127.0.0.1:8848
-  datasource:
-    url: jdbc:mysql://8.148.69.222:3306/hr_tool?useUnicode=true&characterEncoding=utf8&serverTimezone=UTC
-    username: ${MYSQL_USER:root}
-    password: ${MYSQL_PASSWORD:Lc123.321}
   data:
     redis:
-      host: ${REDIS_HOST:localhost}
+      host: ${REDIS_HOST:127.0.0.1}
       port: ${REDIS_PORT:6379}
   kafka:
     bootstrap-servers: ${KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
