--- a/services/common/ht-tools-common-web/pom.xml
+++ b/services/common/ht-tools-common-web/pom.xml
@@ -24,6 +24,10 @@
       <artifactId>spring-web</artifactId>
     </dependency>
     <dependency>
+      <groupId>org.springframework</groupId>
+      <artifactId>spring-context</artifactId>
+    </dependency>
+    <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
     </dependency>
