--- a/services/gateway-service/src/main/resources/application.yml
+++ b/services/gateway-service/src/main/resources/application.yml
@@ -21,12 +21,16 @@ spring:
       server:
         webflux:
           routes:
-            - id: iam-service
+            - id: iam-service-prefix
               uri: lb://iam-service
               predicates:
                 - Path=/api/iam/**
               filters:
                 - StripPrefix=2
+            - id: iam-service
+              uri: lb://iam-service
+              predicates:
+                - Path=/api/me,/api/health,/api/cache/**,/api/infra/**
 management:
   endpoints:
     web:
